--- a/lab/lab01/lab01.ipynb
+++ b/lab/lab01/lab01.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "<img src=\"data6.png\" style=\"width: 15%; float: right; padding: 1%; margin-right: 2%;\"/>\n",
     "\n",
-    "# Lab 1 \u2013 Using Jupyter Notebooks\n",
+    "# Lab 1 – Using Jupyter Notebooks\n",
     "\n",
     "## Data 6, Fall 2025\n",
     "\n",
@@ -561,13 +561,13 @@
     "| 16:9 | 22 | 10.8 |\n",
     "| 16:9 | 24 | 11.8 |\n",
     "\n",
-    "The data above include aspect ratio (all widescreen, 16:9), monitor size in inches, and monitor height in inches\u2013but no monitor width. As a data scientist, you decide to generate another feature for each listed monitor in the data by computing the associated monitor width.\n",
+    "The data above include aspect ratio (all widescreen, 16:9), monitor size in inches, and monitor height in inches–but no monitor width. As a data scientist, you decide to generate another feature for each listed monitor in the data by computing the associated monitor width.\n",
     "\n",
     "In the cell below, **write an arithmetic expression that, when evaluated, computes the monitor width for the 22\" monitor size** listed in the table above.\n",
     "\n",
     "**Hints**:\n",
     "* Recall the Pythagorean theorem for a right triangle: $a^2 + b^2 = c^2$, where $a$, $b$, and $c$ are the lengths of the first leg, second leg, and hypotenuse, respectively.\n",
-    "* We didn't explicitly cover how to take the square root of a number, but recall that in mathematics, the square root function $\\sqrt{x}$ is equivalent to exponentiating with the exponent $\\frac{1}{2}$ \u2013 that is, $\\sqrt{x} = x^{\\frac{1}{2}}$. That means we can use the exponentiation operator `**` to compute square roots, too. For example, `121 ** 0.5` evaluates to `11.0`.\n",
+    "* We didn't explicitly cover how to take the square root of a number, but recall that in mathematics, the square root function $\\sqrt{x}$ is equivalent to exponentiating with the exponent $\\frac{1}{2}$ – that is, $\\sqrt{x} = x^{\\frac{1}{2}}$. That means we can use the exponentiation operator `**` to compute square roots, too. For example, `121 ** 0.5` evaluates to `11.0`.\n",
     "* Like in math, may need to use parentheses `(` and `)` for order of operations.\n",
     "* There are two valid ways of computing the monitor width. Each method uses values from two out of the three available columns.\n",
     "* Feel free to validate your result with a screen size calculator, e.g., [http://screen-size.info/](http://screen-size.info/)."
@@ -696,7 +696,7 @@
    "metadata": {},
    "source": [
     "## Question 8\n",
-    "We\u2019ve been given a line of code, but the variable names aren\u2019t very helpful, which makes it tricky to understand. Your job is to figure out what the code is doing and then rewrite it in a clearer way."
+    "We’ve been given a line of code, but the variable names aren’t very helpful, which makes it tricky to understand. Your job is to figure out what the code is doing and then rewrite it in a clearer way."
    ]
   },
   {
@@ -707,7 +707,7 @@
    "outputs": [],
    "source": [
     "var1 = 212\n",
-    "var2 = (var1 - 32) * 5 / 9 - 273\n",
+    "var2 = (var1 - 32) * 5 / 9 + 273\n",
     "var2"
    ]
   },
@@ -755,7 +755,7 @@
    "source": [
     "<hr>\n",
     "\n",
-    "## Done! \ud83d\ude07"
+    "## Done! 😇"
    ]
   },
   {
